--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="jquery.js"></script>
-<script src="bomb-2d-representation.js"></script>
+<script src="2d-bomb-viewer.js"></script>
+<link rel="stylesheet" href="2d-bomb-viewer.css">
 <script>
 $(document).ready(()=>{
     function defaultClick(serial,name,tag) {
