--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@ $(document).ready(()=>{
         "The Hypercube","Fizzbuzz","Complicated Buttons","Symbolic Password","Button Sequence","Color Morse","Simon Speaks","Hogwarts","Regular Crazy Talk",
         "Simon Spins","Mahjong","101 Dalmatians","Tennis","Pattern Cube","Black Hole","Simon Sings"];
     for(var i=0;i<moduleTemp.length;i++) {
-        moduleLoadOrder.push({name:moduleTemp[i],tag:moduleTemp[i]+" #1",icon:"https://ktane.timwi.de/icons/"+moduleTemp[i].replace('\'','’')+".png",solved:false});
+        moduleLoadOrder.push({name:moduleTemp[i],tag:moduleTemp[i]+" #1",icon:"icons/"+moduleTemp[i].replace('\'','’')+".png",solved:false});
     }
 
     // these are for the select/inputs to remember the last selection
@@ -91,7 +91,7 @@ function updateSetup(triangleN,rectangleW,rectangleH) {
 }
 </script>
 <div id="bomb-options">
-    <select onchange="lastPreSize=this.value;updateSetup();" multiple style="height:104px;overflow:auto;">
+    <select onchange="lastPreSize=this.value;updateSetup();" style="height:104px;overflow:auto;">
         <option value="rectangle" selected>Rectangle &lt;n&gt;x&lt;n&gt;</option>
         <option value="triangle">Triangle &lt;n&gt;</option>
         <option value="small ring">small ring</option>
